--- a/rob599_hw2/package.xml
+++ b/rob599_hw2/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
+
   <name>rob599_hw2</name>
   <version>0.0.0</version>
   <description>ROB 599 Homwork 2</description>
@@ -20,6 +21,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>action_msgs</exec_depend>
 
+   <depend>rob599_hw2_msgs</depend>  
 
 </package>
