--- a/applecontroller_msgs/package.xml
+++ b/applecontroller_msgs/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>applecontroller_msgs</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="ryan@todo.todo">ryan</maintainer>
+  <description>messages, services, and actions for apple_controller</description>
+  <maintainer email="schofier@oregonstate.edu">ryan</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
